// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stepList > renders correctly  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <ul
      class="styles__1rhx5b70"
    >
      <li
        class="styles__1rhx5b71 styles_disabled_false__1rhx5b72"
      >
        <div
          class="styles__vfqe6p0 styles_prominence_default__vfqe6p2 styles_size_medium__vfqe6pb styles_undefined_compound_2__vfqe6ph"
        >
          1
        </div>
        <div
          class="styles__1rhx5b74 styles_size_medium__1rhx5b75"
        >
          Item 1
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`stepList > renders correctly with bulletContent & sentiment 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <ul
      class="styles__1rhx5b70"
    >
      <li
        class="styles__1rhx5b71 styles_disabled_false__1rhx5b72"
      >
        <div
          class="styles__vfqe6p0 styles_prominence_default__vfqe6p2 styles_size_medium__vfqe6pb styles_undefined_compound_3__vfqe6pi"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M8 2.764a5.236 5.236 0 1 0 0 10.472A5.236 5.236 0 0 0 8 2.764M1.6 8a6.4 6.4 0 1 1 12.8 0A6.4 6.4 0 0 1 1.6 8M8 5.48c.321 0 .582.26.582.582v2.424a.582.582 0 0 1-1.164 0V6.061c0-.322.26-.582.582-.582m-.582 4.945c0-.321.26-.581.582-.581h.005c.321 0 .582.26.582.581v.005c0 .322-.26.582-.582.582H8a.58.58 0 0 1-.582-.582z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="styles__1rhx5b74 styles_size_medium__1rhx5b75"
        >
          Item 1
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`stepList > renders correctly with bulletContent 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <ul
      class="styles__1rhx5b70"
    >
      <li
        class="styles__1rhx5b71 styles_disabled_false__1rhx5b72"
      >
        <div
          class="styles__vfqe6p0 styles_prominence_default__vfqe6p2 styles_size_medium__vfqe6pb styles_undefined_compound_2__vfqe6ph"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M8 2.764a5.236 5.236 0 1 0 0 10.472A5.236 5.236 0 0 0 8 2.764M1.6 8a6.4 6.4 0 1 1 12.8 0A6.4 6.4 0 0 1 1.6 8M8 5.48c.321 0 .582.26.582.582v2.424a.582.582 0 0 1-1.164 0V6.061c0-.322.26-.582.582-.582m-.582 4.945c0-.321.26-.581.582-.581h.005c.321 0 .582.26.582.581v.005c0 .322-.26.582-.582.582H8a.58.58 0 0 1-.582-.582z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="styles__1rhx5b74 styles_size_medium__1rhx5b75"
        >
          Item 1
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`stepList > renders correctly with disabled state & bullet icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <ul
      class="styles__1rhx5b70"
    >
      <li
        class="styles__1rhx5b71 styles_disabled_true__1rhx5b73"
      >
        <div
          class="styles__vfqe6p0 styles_disabled_true__vfqe6p1 styles_prominence_default__vfqe6p2 styles_size_medium__vfqe6pb"
        >
          <svg
            aria-hidden="true"
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <div
          class="styles__1rhx5b74 styles_size_medium__1rhx5b75"
        >
          <div>
            Item 1 with disabled state
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`stepList > renders correctly with disabled state 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <ul
      class="styles__1rhx5b70"
    >
      <li
        class="styles__1rhx5b71 styles_disabled_true__1rhx5b73"
      >
        <div
          class="styles__vfqe6p0 styles_disabled_true__vfqe6p1 styles_prominence_default__vfqe6p2 styles_size_medium__vfqe6pb"
        >
          1
        </div>
        <div
          class="styles__1rhx5b74 styles_size_medium__1rhx5b75"
        >
          <div>
            Item 1 with disabled state
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`stepList > renders correctly with small size 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <ul
      class="styles__1rhx5b70"
    >
      <li
        class="styles__1rhx5b71 styles_disabled_false__1rhx5b72"
      >
        <div
          class="styles__vfqe6p0 styles_prominence_default__vfqe6p2 styles_size_small__vfqe6pc styles_undefined_compound_2__vfqe6ph"
        >
          1
        </div>
        <div
          class="styles__1rhx5b74 styles_size_small__1rhx5b76"
        >
          Item 1 small
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
